# uefun

./: Anchor.toml  deploy-keypair.json  init-contract.js  lib.rs  package-lock.json  package.json  token-addresses.js  tournament_betting_system-keypair.json  tournament_betting_system.json
.cursor/rules/: 1.mdc
programs/test/: Cargo.toml
programs/test/src/: lib.rs
programs/token-faucet/: Cargo.toml
programs/token-faucet/src/: lib.rs
tests/: basic-test.ts  build-test.ts  deploy-test.ts  simple-connection-test.ts  token-faucet-fixed.ts  token-faucet.ts  tournament-betting-system.ts  tournament_betting_system.ts
