[package]
name = "tournament_betting_system"
version = "0.1.0"
description = "用于赛事下注和代币质押的智能合约系统"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tournament_betting_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = "5.1.0"

